Fix alignment on addon management icons

--- a/themes/default/css/addons_editor.css
+++ b/themes/default/css/addons_editor.css
@@ -15,9 +15,10 @@
 
 .addon-actions {
 	white-space: nowrap;
+	line-height: normal;
 }
 
-.addon-actions * {
+.addon-actions > * {
 	vertical-align: middle;
 }
 
